; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers_shader/extr_shader_glsl.c_gl_glsl_clear_uniforms_frame.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers_shader/extr_shader_glsl.c_gl_glsl_clear_uniforms_frame.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.shader_uniforms_frame = type { i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.shader_uniforms_frame*)* @gl_glsl_clear_uniforms_frame to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gl_glsl_clear_uniforms_frame(%struct.shader_uniforms_frame* %0) #0 {
  %2 = alloca %struct.shader_uniforms_frame*, align 8
  store %struct.shader_uniforms_frame* %0, %struct.shader_uniforms_frame** %2, align 8
  %3 = load %struct.shader_uniforms_frame*, %struct.shader_uniforms_frame** %2, align 8
  %4 = getelementptr inbounds %struct.shader_uniforms_frame, %struct.shader_uniforms_frame* %3, i32 0, i32 0
  store i32 -1, i32* %4, align 4
  %5 = load %struct.shader_uniforms_frame*, %struct.shader_uniforms_frame** %2, align 8
  %6 = getelementptr inbounds %struct.shader_uniforms_frame, %struct.shader_uniforms_frame* %5, i32 0, i32 1
  store i32 -1, i32* %6, align 4
  %7 = load %struct.shader_uniforms_frame*, %struct.shader_uniforms_frame** %2, align 8
  %8 = getelementptr inbounds %struct.shader_uniforms_frame, %struct.shader_uniforms_frame* %7, i32 0, i32 2
  store i32 -1, i32* %8, align 4
  %9 = load %struct.shader_uniforms_frame*, %struct.shader_uniforms_frame** %2, align 8
  %10 = getelementptr inbounds %struct.shader_uniforms_frame, %struct.shader_uniforms_frame* %9, i32 0, i32 3
  store i32 -1, i32* %10, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
